--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" class="h-full bg-zinc-950">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZenLedger - Offline Accounting</title>
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <meta name="theme-color" content="#18181b">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
