--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
   </head>
   <body class="h-full antialiased" style="font-size: 110%;">
     <div id="root" class="h-full"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
