--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" class="h-full bg-zinc-950">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/zenledger/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZenLedger - Offline Accounting</title>
-    <link rel="manifest" href="/zenledger/manifest.webmanifest" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <meta name="theme-color" content="#18181b">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="ZenLedger">
-    <link rel="apple-touch-icon" href="/zenledger/icons/icon-192.png">
+    <link rel="apple-touch-icon" href="./icons/icon-192.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Page Transition Animations */
